# splitter

./: CMakeLists.txt  README.md  ensembl.gtf  other.gtf  stats.ensembl.tsv  stats.tsv
GffLoader/: GenomicRegion.h  GffEntry.cpp  GffEntry.h  GffLoader.cpp  GffLoader.h  GffSplitLocator.cpp  GffSplitLocator.h  GffTranscript.cpp  GffTranscript.h  Region.cpp
SplitFinder/: FeatureManager.cpp  FeatureManager.h  SplitEvent.h  SplitHashMap.h  XAMSplitStreamer.cpp
Utils/: CLParser.cpp  CLParser.h  LineProcessor.cpp  LineProcessor.h  Utils.cpp  Utils.h
src/: CMakeLists.txt  main.cpp  mainGTFTool.cpp
src/gfxloader/: GffLoader.h  GffTranscript.cpp  Region.h
src/gtxloader/: GenomicRegion.h  GffEntry.cpp  GffEntry.h  GffLoader.cpp  GffLoader.h  GffSplitLocator.cpp  GffSplitLocator.h
src/splits/: SplitEvent.cpp  SplitEvent.h  SplitHashMap.cpp  SplitHashMap.h  XAMSplitStreamer.cpp  XAMSplitStreamer.h
src/tools/gtxtools/: main.cpp
src/tools/gtxtools-gui/: gtxtools-gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/tools/splitprocess/: main.cpp
src/tools/splitter/: main.cpp
src/utils/: CLParser.cpp  CLParser.h  CLRunnable.cpp  CLRunnable.h  FileWriter.cpp  FileWriter.h  LineProcessor.cpp  ThreadedHashMap.cpp  ThreadedHashMap.h  Utils.h  UtilsTemplated.h
